Added devcontainers, postges, and basic api

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	 "forwardPorts": [5432, 3000]
+	 "forwardPorts": [5432, 3000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "rustc --version",
@@ -20,4 +20,34 @@
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
+    "extensions": [
+		"rust-lang.rust-analyzer",
+		"tamasfe.even-better-toml",
+		"eamodio.gitlens",
+		"davidanson.vscode-markdownlint",
+		"ms-azuretools.vscode-docker",
+		"shardulm94.trailing-spaces",
+		"Gruntfuggly.todo-tree",
+		"bierner.emojisense",
+		"stkb.rewrap",
+		"vscode-icons-team.vscode-icons",
+		"github.vscode-pull-request-github",
+		"redhat.vscode-yaml",
+		"bajdzis.vscode-database",
+		"IBM.output-colorizer",
+		"dustypomerleau.rust-syntax",
+		"Swellaby.rust-pack"
+	],
+    "settings": {
+        "files.eol": "\n",
+        "[rust]": {
+            "editor.defaultFormatter": "rust-lang.rust-analyzer",
+            "editor.formatOnSave": true
+        },
+        "remote.extensionKind": {
+            "ms-azuretools.vscode-docker": "workspace"
+        },
+        "editor.codeActionsOnSaveTimeout": 3000,
+  //      "rust-analyzer.serverPath": "/usr/local/bin/rust-analyzer"
+    }
 }
