--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=postgresql://postgres:{password}@localhost/jurydb
+DATABASE_URL=postgresql://postgres:postgres@localhost/postgres
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=password123
