--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.20"
-sqlx = "0.7.2"
-reqwest = {version = "0.11.22", features = ["json"]}
-tokio = {version = "1.33.0", features = ["full"]}
-serde = "1.0.190"
+axum = "0.6.12"
+chrono = { version = "0.4.24", features = ["serde"] }
+dotenv = "0.15.0"
+serde = { version = "1.0.159", features = ["derive"] }
+serde_json = "1.0.95"
+sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
+tokio = { version = "1.27.0", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["cors"] }
+uuid = { version = "1.3.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
 rstest = "0.18.2"
