--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,15 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
-sqlx = "0.7.2"
+chrono = { version = "0.4.24", features = ["serde"] }
+dotenv = "0.15.0"
+serde = { version = "1.0.159", features = ["derive"] }
+serde_json = "1.0.95"
+sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
+tokio = { version = "1.33.0", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["cors"] }
+uuid = { version = "1.3.0", features = ["serde", "v4"] }
 reqwest = {version = "0.11.22", features = ["json"]}
-tokio = {version = "1.33.0", features = ["full"]}
-serde = "1.0.190"
 
 [dev-dependencies]
 rstest = "0.18.2"
