--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	 "forwardPorts": [5432, 3000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "rustc --version",
+	 "postCreateCommand": "cargo install sqlx-cli --no-default-features --features native-tls,postgres && cargo install cargo-watch && sqlx migrate run",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
@@ -23,17 +23,14 @@
     "extensions": [
 		"rust-lang.rust-analyzer",
 		"tamasfe.even-better-toml",
-		"eamodio.gitlens",
 		"davidanson.vscode-markdownlint",
 		"ms-azuretools.vscode-docker",
 		"shardulm94.trailing-spaces",
-		"Gruntfuggly.todo-tree",
 		"bierner.emojisense",
 		"stkb.rewrap",
 		"vscode-icons-team.vscode-icons",
 		"github.vscode-pull-request-github",
 		"redhat.vscode-yaml",
-		"bajdzis.vscode-database",
 		"IBM.output-colorizer",
 		"dustypomerleau.rust-syntax",
 		"Swellaby.rust-pack"
