--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,4 +4,5 @@ FROM mcr.microsoft.com/devcontainers/rust:latest
 # RUSTFLAGS="-C link-arg=-fuse-ld=lld" or with Cargo's configuration file (i.e see .cargo/config.toml).
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
    && apt-get -y install clang lld \
-   && apt-get autoremove -y && apt-get clean -y
+   && apt-get autoremove -y && apt-get clean -y \
+   && curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
