--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,7 +45,7 @@
         "remote.extensionKind": {
             "ms-azuretools.vscode-docker": "workspace"
         },
-        "editor.codeActionsOnSaveTimeout": 3000,
+        "editor.codeActionsOnSaveTimeout": 3000
   //      "rust-analyzer.serverPath": "/usr/local/bin/rust-analyzer"
     }
 }
